# diagnostics-service-playground

./: .gitignore  README.md
async/: .dockerignore  Cargo.toml  docker-compose.yaml
async/src/: main.rs
sqlx/: .dockerignore  .env  Cargo.toml  dockerfile  logdb.sqlite-shm  test.http
sqlx/src/: main.rs
sync/src/: main.rs
